--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -78,3 +78,28 @@ code {
 .popular-tag {
     padding-left: 5px;
 }
+
+.new-question-box {
+    border: 1px solid;
+    margin-top: 20px;
+    border-radius: 12px;
+    padding: 10px;
+    padding: 15px;
+}
+
+.new-question-line {
+    margin-top: 10px;
+}
+
+.new-question-width {
+    width: 375px;
+}
+
+.new-question-height {
+    height: 200px;
+}
+
+.ask-btn {
+    margin-top: 20px;
+    width: 100px;
+}
