--- a/templates/inc/view_question_box.html
+++ b/templates/inc/view_question_box.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="row question-box">
+<div class="row view-question-box">
       <! –– For Image ––>
       <div class="col-3">
          <img class = "question-img" src = "{% static "img/test.jpg" %}" width = 100px height = 100px >
