--- a/templates/settings.html
+++ b/templates/settings.html
@@ -2,17 +2,14 @@
 {% load static %}
 
 {% block navbar %}
-   {% include 'inc/unlogined_navbar.html' %}
+   {% include 'inc/logined_navbar.html' %}
 {% endblock navbar %}
 
 {% block content %}
 <div class="col-9">
-    <div class = "row">
-        <div class = " type-pages">
-            <h2>Registration</h2>
-        </div>
+    <div>
+        <h2>Settings: Dr. Pepper</h2>
     </div>
-    <div class = "warning-title"> Sorry, this email address already registered </div>
     <form class="setting-form">
         <div class="form-group row">
             <label for="inputLogin" class="col-sm-2 col-form-label">Login</label>
@@ -32,29 +29,17 @@
                 <input type="text" class="form-control" id="Nickname" value="Dr. Perper">
             </div>
         </div>
-        <div class="form-group row">
-            <label for="password" class="col-sm-2 col-form-label">Password</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="password" value="Some password">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="repeat password" class="col-sm-2 col-form-label">Repeat password</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="repeat password" value="Some password">
-            </div>
-        </div>
-
         <div class="row">
             <div class="col-2">
                 Upload avatar
             </div>
             <div class="col-10">
-                <div class="custom-file">
+                <img class = " question-img" src = "{% static "img/test1.jpg" %}" width = 125px height = 125px >
+                <div class="setting-form custom-file">
                     <input type="file" class="custom-file-input" id="customFile">
                     <label class="custom-file-label" for="customFile">Choose image</label>
-                    <button type="button" class="btn btn-primary setting-form">Register</button>
                 </div>
+                <button type="button" class="btn btn-primary setting-form">Save</button>
             </div>
         </div>
     </form>
