Add lab_02. With pagination bag

--- a/templates/inc/base.html
+++ b/templates/inc/base.html
@@ -32,8 +32,8 @@
             </div>
         </main>
         <! –– JS ––>
-        <script src="js/jquery.slim.min.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="{% static "js/jquery.slim.min.js" %}"></script>
+        <script src="{% static "js/popper.min.js" %}"></script>
+        <script src="{% static "js/bootstrap.min.js" %}"></script>
     </body>
 </html>
