--- a/templates/inc/block_right.html
+++ b/templates/inc/block_right.html
@@ -3,15 +3,23 @@
       <div>
          <h3>Polular Tags</h3>
       </div>
-      <a class = "popular-tag" href = "" style="color:black">perl</a>
-      <a class = "popular-tag" href = "" style="color:#darkblue">java</a>
-      <h3><a class = "popular-tag" href = "" style="color:red">python</a></h3>
-      <a class = "popular-tag" href = "" style="color:black">MySQL</a>
-      <a class = "popular-tag" href = "" style="color:darkblue">django</a>
-      <h4><a class = "popular-tag" href = "" style="color:#00ff00">firefox</a></h4>
-      <a class = "popular-tag" href = "" style="color:black">Swift</a>
-      <h4><a class = "popular-tag" href = "" style="color:darkblue">MacOS</a></h4>
-      <a class = "popular-tag" href = "" style="color:#00ff00">Apt-get</a>
+
+      {% for tag in tags %}
+         <h3><a href="{% url 'tagquestions' tag %}"> {{ tag }} </a></h3>
+      {% endfor %}
+
+      <!-- любой текст
+      <a class = "popular-tag" href = "{% url 'tagquestions' 'cpp' %}" style="color:black">cpp</a>
+      <a class = "popular-tag" href = "{% url 'tagquestions' 'java' %}" style="color:#darkblue">java</a>
+      <h3><a class = "popular-tag" href = "{% url 'tagquestions' 'python' %}" style="color:red">python</a></h3>
+      <a class = "popular-tag" href = "{% url 'tagquestions' 'MySQL' %}" style="color:black">MySQL</a>
+      <a class = "popular-tag" href = "{% url 'tagquestions' 'bender' %}" style="color:darkblue">bender</a>
+      <h4><a class = "popular-tag" href = "{% url 'tagquestions' 'bla' %}" style="color:#00ff00">bla</a></h4>
+      <a class = "popular-tag" href = "{% url 'tagquestions' 'raytrace' %}" style="color:black">raytrace</a>
+      <h4><a class = "popular-tag" href = "{% url 'tagquestions' 'MacOS' %}" style="color:darkblue">MacOS</a></h4>
+      <a class = "popular-tag" href = "{% url 'tagquestions' 'Apt-get' %}" style="color:#00ff00">Apt-get</a>
+      <a class = "popular-tag" href = "{% url 'tagquestions' 'kke' %}" style="color:darkblue">kke</a>
+      -->
    </div>
    <div class="col best-members">
       <div>
