--- a/templates/inc/comment_box.html
+++ b/templates/inc/comment_box.html
@@ -13,12 +13,11 @@
          </div>
     </div>
     <! –– For title and text ––>
+
+
     <div class="col-9">
         <div class="question-text">
-            Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco
+            {{ comment }}
         </div>
         <div style="margin-top: 10px;">
             <input type="checkbox" id="isCorrest" name="isCorrect">
