--- a/templates/inc/tag.html
+++ b/templates/inc/tag.html
@@ -1,3 +1,3 @@
 {% load static %}
 
-<a class = "question-tag underlined" href = "">{{ tagone }}</a>
+<a href="{% url 'tagquestions' tagname %}"> {{ tagname }} </a>
