--- a/templates/inc/view_question_box.html
+++ b/templates/inc/view_question_box.html
@@ -20,14 +20,15 @@
          </div>
          <div class="row under-question">
             <div class = "question-answers">
-               <a class = "underlined">Ответы (0)</a>
+               <div>Ответы (0)</div>
             </div>
             <div class="question-tags">
                Теги:
-                {% include 'inc/tag.html' %}
-                {% for tagone in question.tag %}
-                    {% include 'inc/tag.html' %}
-                {% endfor %}
+                {% with tags_question=question.tag %}
+                    {% for tagname in tags_question %}
+                        {% include 'inc/tag.html' %}
+                    {% endfor %}
+                {% endwith %}
             </div>
          </div>
       </div>
