--- a/templates/inc/question_box.html
+++ b/templates/inc/question_box.html
@@ -3,11 +3,11 @@
 <div class="row question-box">
       <! –– For Image ––>
       <div class="col-3">
-         <img class = "question-img" src = "{% static "img/test.jpg" %}" width = 100px height = 100px >
+         <img class = "question-img" src = "{{ question.author.image.url }}" width = 100px height = 100px >
          <div class="row right-side">
              <input type="image" name="dislike" src="{% static "img/dislike.png" %}" alt="Submit" width="19" height="19">
              <div class="rating-title">
-                 5
+                 {{ question.likes.all.count }}
              </div>
              <input type="image" name="like" src="{% static "img/like.png" %}" alt="Submit" width="19" height="19">
          </div>
@@ -21,12 +21,12 @@
          </div>
          <div class="row under-question">
             <div class = "question-answers">
-               <a class = "underlined" href="{% url 'selectedquestion' question.id %}">Ответы (0)</a>
+               <a class = "underlined" href="{% url 'selectedquestion' question.id %}">Ответы ({{ question.answers_number }})</a>
             </div>
             <div class="question-tags">
 
                Теги:
-                {% with tags_question=question.tag %}
+                {% with tags_question=question.tags.all %}
                     {% for tagname in tags_question %}
                         {% include 'inc/tag.html' %}
                     {% endfor %}
