--- a/templates/inc/view_question_box.html
+++ b/templates/inc/view_question_box.html
@@ -3,11 +3,11 @@
 <div class="row view-question-box">
       <! –– For Image ––>
       <div class="col-3">
-         <img class = "question-img" src = "{% static "img/test.jpg" %}" width = 100px height = 100px >
+         <img class = "question-img" src = "{{ question.author.image.url }}" width = 100px height = 100px >
          <div class="row right-side">
              <input type="image" name="dislike" src="{% static "img/dislike.png" %}" alt="Submit" width="19" height="19">
              <div class="rating-title">
-                 5
+                 {{ question.likes.all.count }}
              </div>
              <input type="image" name="like" src="{% static "img/like.png" %}" alt="Submit" width="19" height="19">
          </div>
@@ -20,11 +20,11 @@
          </div>
          <div class="row under-question">
             <div class = "question-answers">
-               <div>Ответы (0)</div>
+               <div>Ответы ({{ question.answers_number }})</div>
             </div>
             <div class="question-tags">
                Теги:
-                {% with tags_question=question.tag %}
+                {% with tags_question=question.tags.all %}
                     {% for tagname in tags_question %}
                         {% include 'inc/tag.html' %}
                     {% endfor %}
