--- a/templates/inc/unlogined_navbar.html
+++ b/templates/inc/unlogined_navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="">Ask-Timonin</a>
+    <a class="navbar-brand" href="{% url 'newquestions' %}">Ask-Timonin</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
