--- a/static/css/sticky-footer-navbar.css
+++ b/static/css/sticky-footer-navbar.css
@@ -31,6 +31,7 @@ code {
     padding: 10px;
 }
 
+
 .question-img {
     max-width: 150px;
     border-radius: 10px;
@@ -107,10 +108,10 @@ code {
 }
 
 .view-question-box {
+    border: 2.5px solid;
     margin-top: 20px;
     border-radius: 12px;
     padding: 10px;
-    border-bottom: 3px solid black !important;
 }
 
 .answer-box {
