Add generator for LikeDislike

--- a/templates/inc/question_box.html
+++ b/templates/inc/question_box.html
@@ -7,7 +7,7 @@
          <div class="row right-side">
              <input type="image" name="dislike" src="{% static "img/dislike.png" %}" alt="Submit" width="19" height="19">
              <div class="rating-title">
-                 {{ question.likes.all.count }}
+                 {{ question.rating }}
              </div>
              <input type="image" name="like" src="{% static "img/like.png" %}" alt="Submit" width="19" height="19">
          </div>
