--- a/templates/question_page.html
+++ b/templates/question_page.html
@@ -20,7 +20,7 @@
    </div>
 
    <div class = "row">
-      <button type="button" class="btn btn-secondary ask-btn" >Ask!</button>
+      <button type="button" class="btn btn-secondary ask-btn" >Comment</button>
    </div>
 
    <! –– Pagination ––>
