--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block navbar %}
-   {% include 'inc/unlogined_navbar.html' %}
+   {% include 'inc/logined_navbar.html' %}
 {% endblock navbar %}
 
 {% block content %}
