--- a/templates/inc/logined_navbar.html
+++ b/templates/inc/logined_navbar.html
@@ -25,9 +25,14 @@
                         </h5>
                     </div>
                 </div>
+
                 <div class="col">
-                    <a class="question-tags" href = "{% url 'settings' %}">Settings</a>
-                    <a class="question-tags" href = "{% url 'signin' %}">Log out</a>
+                    {% if request.user.is_authenticated %}
+                        <a class="question-tags" href = "{% url 'settings' %}">Settings</a>
+                        <a class="question-tags" href = "{% url 'signout' %}">Logout</a>
+                    {% else %}
+                        <a class="question-tags" href = "{% url 'signin' %}">Login</a>
+                    {% endif %}
                 </div>
             </div>
         </form>
