--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,6 @@
 {% extends 'inc/base.html' %}
 {% load static %}
+{% load bootstrap4 %}
 
 {% block navbar %}
    {% include 'inc/logined_navbar.html' %}
@@ -12,51 +13,19 @@
             <h2>Registration</h2>
         </div>
     </div>
-    <div class = "warning-title"> Sorry, this email address already registered </div>
-    <form class="setting-form">
-        <div class="form-group row">
-            <label for="inputLogin" class="col-sm-2 col-form-label">Login</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputLogin" value="dr_pepper">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputEmail" value="dr.pepper@mail.ru">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="Nickname" class="col-sm-2 col-form-label">Nickname</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="Nickname" value="Dr. Perper">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="password" class="col-sm-2 col-form-label">Password</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="password" value="Some password">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="repeat password" class="col-sm-2 col-form-label">Repeat password</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="repeat password" value="Some password">
-            </div>
+    <form class="form setting-form" method="POST" action="/signup/" enctype="" >
+
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        {% buttons %}
+
+        <button type="submit" class="btn btn-primary">Register</button>
+        {% endbuttons %}
+
+        <div class="col-sm-10">
+                <a class="question-tags underlined" href = "{% url 'signin' %}">Login to your account</a>
         </div>
 
-        <div class="row">
-            <div class="col-2">
-                Upload avatar
-            </div>
-            <div class="col-10">
-                <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="customFile">
-                    <label class="custom-file-label" for="customFile">Choose image</label>
-                    <button type="button" class="btn btn-primary setting-form">Register</button>
-                </div>
-            </div>
-        </div>
     </form>
 </div>
 {% endblock content %}
